src/objects/CPA_PWORF__c.object
<CustomObject>
    <description>This object holds Project Work Order Request Form (PWORF) details which is used for supplier/vendor management.

It displays PWORF requests received from Project Services / Delivery Teams at Unilever.</description>
    <fields>
        <fullName>Analyse_sessions_expected__c</fullName>
        <inlineHelpText>Indicate proposed dates, location, agenda, and which stakeholders will attend.</inlineHelpText>
        <label>Analyse Sessions Expected*</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Breached_By_Days__c</fullName>
        <description>This field created for Work Order Status Report.</description>
        <formula>IF(ISPICKVAL(pkl_Breach_Applicable__c, &apos;Yes&apos;) ,IF((AND(ISNULL(dat_Revised_Submission_Date__c),dat_Expected_SLA2_Date__c &lt; TODAY())), ((CASE(MOD( dat_Expected_SLA2_Date__c - DATE(1985,6,24),7), 
0 , CASE( MOD( TODAY() - dat_Expected_SLA2_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( TODAY() - dat_Expected_SLA2_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( TODAY() - dat_Expected_SLA2_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( TODAY() - dat_Expected_SLA2_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( TODAY() - dat_Expected_SLA2_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( TODAY() - dat_Expected_SLA2_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( TODAY() - dat_Expected_SLA2_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( TODAY() - dat_Expected_SLA2_Date__c )/7)*5)) - 1), (IF(AND(NOT(ISNULL(dat_Revised_Submission_Date__c)),dat_Revised_Submission_Date__c&lt;TODAY()),((CASE(MOD( dat_Revised_Submission_Date__c - DATE(1985,6,24),7), 
0 , CASE( MOD( TODAY() - dat_Revised_Submission_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( TODAY() - dat_Revised_Submission_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( TODAY() - dat_Revised_Submission_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( TODAY() - dat_Revised_Submission_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( TODAY() - dat_Revised_Submission_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( TODAY() - dat_Revised_Submission_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( TODAY() - dat_Revised_Submission_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( TODAY() - dat_Revised_Submission_Date__c )/7)*5))-1),null))),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Breached By Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Breached_Days__c</fullName>
        <description>This field created for reporting purpose.</description>
        <formula>If ( ISPICKVAL( pkl_Breach_Applicable__c , &apos;YES&apos;),
	CASE(pkl_Status__c,
		&quot;Accepted&quot;,(
		   CASE(MOD( dat_Expected_SLA2_Date__c - DATE(1985,6,24),7), 
			  0 , CASE( MOD( TODAY() - dat_Expected_SLA2_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
			  1 , CASE( MOD( TODAY() - dat_Expected_SLA2_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
			  2 , CASE( MOD( TODAY() - dat_Expected_SLA2_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
			  3 , CASE( MOD( TODAY() - dat_Expected_SLA2_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
			  4 , CASE( MOD( TODAY() - dat_Expected_SLA2_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
			  5 , CASE( MOD( TODAY() - dat_Expected_SLA2_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
			  6 , CASE( MOD( TODAY() - dat_Expected_SLA2_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
			  999) 
			  + 
			  (FLOOR(( TODAY() - dat_Expected_SLA2_Date__c )/7)*5) 
		),
		&quot;Answered&quot;,(
			 CASE(MOD( dat_Expected_SLA2_Date__c - DATE(1985,6,24),7), 
				  0 , CASE( MOD( dat_PWORF_Answered_Date__c - dat_Expected_SLA2_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
				  1 , CASE( MOD( dat_PWORF_Answered_Date__c - dat_Expected_SLA2_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
				  2 , CASE( MOD( dat_PWORF_Answered_Date__c - dat_Expected_SLA2_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
				  3 , CASE( MOD( dat_PWORF_Answered_Date__c - dat_Expected_SLA2_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
				  4 , CASE( MOD( dat_PWORF_Answered_Date__c - dat_Expected_SLA2_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
				  5 , CASE( MOD( dat_PWORF_Answered_Date__c - dat_Expected_SLA2_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
				  6 , CASE( MOD( dat_PWORF_Answered_Date__c - dat_Expected_SLA2_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
				  999) 
				  + 
				  (FLOOR(( dat_PWORF_Answered_Date__c - dat_Expected_SLA2_Date__c )/7)*5) 
		
		),
	0)
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Breached Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Case__c</fullName>
        <inlineHelpText>Please enter details of the main ideas and business reason(s) underpinning the Project Request Form and why it is required by Unilever</inlineHelpText>
        <label>Business Case*</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Clarity_Programme_ID__c</fullName>
        <label>Clarity Programme ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Business_Model_processes__c</fullName>
        <inlineHelpText>Drafting Note:  For any type of change, analyse this involves a change in the Core Business Processes; such changes can be consolidated and updated in the CBM Documentation; this might also result in updating end-user training material. Please check with</inlineHelpText>
        <label>Core Business Model processes</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Does_this_Project_impact_systems_list__c</fullName>
        <inlineHelpText>Please consider if the project results in changes to one of these systems (eg: creating new functionality, changing existing functions, configuration changes, or interface changes that may compromise Unilever’s financial reporting).</inlineHelpText>
        <label>Does this Project impact below systems?</label>
        <picklist>
            <picklistValues>
                <fullName>Eclipse Russia I3P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sirius S1P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siebel CRM4Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cordillera  0</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Does_this_Project_involve_Unilever_conf__c</fullName>
        <inlineHelpText>Does this ‘Project’ involve Unilever confidential data which should not be passed to A.N? Other third party as part of a Unilever acquisition, or AN Other confidential data which should not be passed to Unilever? This section is for Merger and Acquisition</inlineHelpText>
        <label>3rd Party/Unilever Confidential Data*</label>
        <picklist>
            <picklistValues>
                <fullName>Involved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Involved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Does_this_project_change_Core_Business_M__c</fullName>
        <inlineHelpText>Does this project change the Core Business Model processes or sub-processes?</inlineHelpText>
        <label>Core Business Model changed?*</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected_Business_Go_live_date__c</fullName>
        <label>Expected Business Go Live Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Start_Date_for_DBTD_PWO__c</fullName>
        <inlineHelpText>This is mandatory if project phases are DBTD</inlineHelpText>
        <label>Expected Start Date for DBTD PWO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Start_Date_for_Plan_and_Analyse__c</fullName>
        <description>Displays expected date and analyse activities</description>
        <inlineHelpText>Expected Start Date for Plan &amp; Analyse Activities</inlineHelpText>
        <label>Expected PA Start Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>For_Search_Numeric__c</fullName>
        <description>This field will contain the PWO ID count. Used for search logic, not on UI.</description>
        <label>For Search Numeric</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>For_Search__c</fullName>
        <description>This field will be used for record search purpose only. it will be appended with various contract Ids on a particular PWORF.</description>
        <label>For Search</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Governance_Risk_and_Compliance__c</fullName>
        <inlineHelpText>If you have checked ‘Yes’ please contact subramanian.Venkataraman@unilever.com to discuss your project.</inlineHelpText>
        <label>Governance Risk and Compliance*</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_W_R_been_discussed_with_Supplier_Per__c</fullName>
        <inlineHelpText>Has W@R been discussed with Supplier Performance Team?
(If no, please contact Supplier Performance Team to discuss)</inlineHelpText>
        <label>Agreed with Supplier Performance Team</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_many_man_days_do_you_think_you_requi__c</fullName>
        <inlineHelpText>Please note it may take few days from submission of this request to getting of PWO signed.</inlineHelpText>
        <label>Man Days required for W@R</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impact_if_expected_business_go_live_date__c</fullName>
        <inlineHelpText>Impact if expected business go live date is not met</inlineHelpText>
        <label>Impact if go live date not met*</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Implementation_Timeframes_Milestones_D__c</fullName>
        <description>Expected timeframes for delivery, and any required Milestones as well as dependencies with other teams within the project, as well as other projects</description>
        <inlineHelpText>Drafting Note:  Clearly state the expected timeframes for delivery, and list any required Milestones as well as dependencies with other teams within the project, as well as other projects.  If the project is classified as a material project, please always</inlineHelpText>
        <label>Implementation Timeframes,Milestones &amp; D</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>In_Scope__c</fullName>
        <label>In Scope*</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Interface_to_the_system_Detail__c</fullName>
        <label>Interface to the system Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interface_to_the_system__c</fullName>
        <description>Does this ‘Project’ introduce or modify any Interface to the system? (For example, modifying XI interfaces to/from SAP R/3)</description>
        <inlineHelpText>For any type of change or enhancement required, please consider whether any existing interfaces should be amended as part of development, or new interfaces should be created.  If your answer is ‘YES’, please describe the extent</inlineHelpText>
        <label>Interface Introduced/Changed?*</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Project_Require__c</fullName>
        <inlineHelpText>For any type of change or enhancement required, please consider if it can potentially impact the performance of the system and describe here the extent and nature of the anticipated impact.</inlineHelpText>
        <label>Application Performance Testing Needed*</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Project__c</fullName>
        <inlineHelpText>For any type of change or enhancement required, please consider if data conversion or data upload is required in the system and if there is a need to carry our testing of the Data before P2P.  If ‘Yes’, please describe the data.</inlineHelpText>
        <label>Data-Specific Testing required?*</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_this_a_new_or_re_worked_Integration_R__c</fullName>
        <description>Assess the impact on UPXI, XI, BODI and MQ and includes assessment of volumetric impact etc</description>
        <inlineHelpText>Is this a new or re-worked Integration Requirement?
This section should assess the impact on UPXI, XI, BODI and MQ and includes assessment of volumetric impact etc.</inlineHelpText>
        <label>New or ReWorked Integration Requirement*</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Key_Contacts__c</fullName>
        <inlineHelpText>&quot;Name&quot;

&quot;Email&quot;

&quot;Telephone&quot;</inlineHelpText>
        <label>Key Contacts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LatestPWOID__c</fullName>
        <description>This field hold the id of the latest PWO on a PWORF</description>
        <label>LatestPWOID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_PWO_Status__c</fullName>
        <description>This field hold the status of the latest PWO</description>
        <label>Most Recent PWO&apos;s Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_or_re_worked_Integration_Requirement__c</fullName>
        <inlineHelpText>[Drafting Note:  This section should assess the impact on UPXI,XI, BODI and MQ and includes assessment of volumetric impact etc.]</inlineHelpText>
        <label>New or re-worked Integration Requirement</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Out_of_Scope__c</fullName>
        <label>Out of Scope*</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Overall_purpose_or_function_of_the_proje__c</fullName>
        <inlineHelpText>Please enter a description for the overall purpose or funtion of the project</inlineHelpText>
        <label>Overall Purpose/Function of the Project*</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PWORF_Count__c</fullName>
        <description>This field created for reporting purpose.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PWORF Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PWO_numbers__c</fullName>
        <label>PWO numbers</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planning_sessions_expected__c</fullName>
        <inlineHelpText>Indicate proposed dates, location, agenda, and which stakeholders will attend</inlineHelpText>
        <label>Planning Sessions Expected*</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Please_provide_any_other_support_info__c</fullName>
        <inlineHelpText>[Drafting note: Please complete the following section with as much information as possible  :</inlineHelpText>
        <label>Please provide any other support info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Dependencies__c</fullName>
        <label>Project Dependencies*</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Invasive_Nature__c</fullName>
        <inlineHelpText>[Drafting Note:  If this project is invasive, please list the countries and/or applications impacted and the testing requirements.  Invasive changes should be tested additionally during the UAT/Regression Test Phase, if required by the impacted countries]</inlineHelpText>
        <label>Project Invasive Nature</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Require_Data_Specific_Testing__c</fullName>
        <label>Project Require Data Specific Testing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <description>Insert Reference to HLE if given</description>
        <inlineHelpText>[Drafting note: If a HLE has been given, please insert reference to HLE document.  Otherwise mark ‘Not applicable’]</inlineHelpText>
        <label>Reference:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Related_CRs__c</fullName>
        <description>This field is used to store Clarity ID and Internal ID of all PWORF and PWO related CRs.</description>
        <label>Related CRs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_LOIs__c</fullName>
        <label>Related LOIs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Role_or_System_Authorisation__c</fullName>
        <inlineHelpText>For any type of change or enhancement required, please consider whether any existing role/authorisation should be amended as part of development, or a new set of role/authorisations should be created.</inlineHelpText>
        <label>Role/Authorisation Introduced/Changed?*</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stakeholder_Expectations__c</fullName>
        <inlineHelpText>Description of expectations from Unilever stakeholders</inlineHelpText>
        <label>Stakeholder Expectations*</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Summary_of_requirements_and_deliverables__c</fullName>
        <description>Unilever’s requirements and deliverables expected in respect of this Project</description>
        <inlineHelpText>Please describe Unilever’s requirements in respect of this Project as set out in the table where possible. Identify the main deliverable expected and the specific milestone goals that Accenture is required to meet.</inlineHelpText>
        <label>Summary Of Requirements &amp; Deliverables*</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TAT__c</fullName>
        <description>This field created for reporting purpose.</description>
        <formula>IF( ISPICKVAL( pkl_Status__c , &quot;Resubmitted Date&quot; ) ,  dat_Resubmitted_Date__c  -  dat_Withhold_Date__c ,  dat_PWORF_Answered_Date__c  -  dat_Submitted_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Travel_Arrangements__c</fullName>
        <inlineHelpText>Please provide details of any travel required during this project</inlineHelpText>
        <label>Travel Arrangements*</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>URL_to_Questionnaire_for_GRC_impacts__c</fullName>
        <defaultValue>&quot;https://unilever--CHAZWA.cs14.my.salesforce.com/sfc/p/c0000003vcv1/a/c00000004ETF/2JCBimGF0_noSb99ZzHH.MUJPNVHm.ihAKKzO71x7ow&quot;</defaultValue>
        <inlineHelpText>Copy below URL and review it in new Browser</inlineHelpText>
        <label>Link for Questionnaire for GRC impacts</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Unique_PWORF__c</fullName>
        <label>Unique PWORF</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>VDM_Name__c</fullName>
        <defaultValue>&quot;Accenture&quot;</defaultValue>
        <label>Vendor Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_No__c</fullName>
        <description>Enter Version No</description>
        <inlineHelpText>Drafting Note:  0.x for draft;  1.x etc  for final/revisions</inlineHelpText>
        <label>Version No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_are_the_specific_support_require__c</fullName>
        <inlineHelpText>[Drafting note: Please complete the following section with as much information as possible  :</inlineHelpText>
        <label>What are the specific support require</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_do_you_expect_the_availability_o__c</fullName>
        <inlineHelpText>Drafting note: Please complete the following section with as much information as possible  :</inlineHelpText>
        <label>What do you expect the availability o</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>When_do_you_require_the_Work_at_Risk_to__c</fullName>
        <label>Work at Risk Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Which_BP_Innovation_director_has_approve__c</fullName>
        <inlineHelpText>Which BP/Innovation director has approved the Work at Risk spend?</inlineHelpText>
        <label>Director who approved W@R spend</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Who_will_support_this_service_once_live__c</fullName>
        <inlineHelpText>Service support information - Who will support this service once live?</inlineHelpText>
        <label>Post Go-Live Support Service*</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Will_this_project_require_an_LOI_for_Wor__c</fullName>
        <inlineHelpText>Will this project require an LOI for Working at Risk?</inlineHelpText>
        <label>Work at Risk required?*</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>auto_PWORF_ID__c</fullName>
        <description>PWORF Id for Auto number</description>
        <displayFormat>PWORF-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>PWORF ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>chk_LOI_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ones LOI is cancelled for PWORF another PWORF cannot be created</description>
        <label>LOI Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>chk_Request_for_Cancel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request for Cancel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>chk_isAccepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAccepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>chk_isAutoAccepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAutoAccepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>chk_isReSubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isReSubmitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>chk_isReturned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isReturned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>chk_isWithhold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isWithhold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dat_Auto_Accepted_Date__c</fullName>
        <label>Auto Accepted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_Cancelled_Date__c</fullName>
        <label>Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_Expected_SLA1_Date__c</fullName>
        <description>This date will be calculated in the background in after insert trigger. Get SLA1 value and add those days in current date to get expected SLA1 date.</description>
        <inlineHelpText>PWORF acceptance date = PWORF submission + SLA1</inlineHelpText>
        <label>PWORF to be accepted by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_Expected_SLA2_Date__c</fullName>
        <description>This date will be calculated in the background in after insert trigger. Get SLA2 value and add those days in current date to get expected SLA2 date.</description>
        <inlineHelpText>PWO submission date = PWORF submission + SLA2</inlineHelpText>
        <label>PWO to be submitted by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_Indicative_timeline_End_date__c</fullName>
        <label>Indicative Timeline End Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_Indicative_timeline_Start_date__c</fullName>
        <label>Indicative Timeline Start Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_PWORF_Answered_Date__c</fullName>
        <label>Actual PWO submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_Resubmitted_Date__c</fullName>
        <label>Resubmitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_Revised_Submission_Date__c</fullName>
        <label>Revised Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_SLA1_Accepted_Date__c</fullName>
        <description>SLA1 Accepted Date</description>
        <label>SLA1 Accepted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_Submitted_Date__c</fullName>
        <description>ULPM Submitted date for PWORF</description>
        <label>Date Of Submission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_VDM_Request_return_Date__c</fullName>
        <label>Vendor Request return Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_Withhold_Date__c</fullName>
        <label>Withhold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dt_Date_Of_Acceptance__c</fullName>
        <description>Date when the vendor accepted the PWORF manually</description>
        <inlineHelpText>Date on which the PWORF was accepted by the vendor.</inlineHelpText>
        <label>Date Of Acceptance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dt_Date_Of_Request__c</fullName>
        <description>Date when the PWORF was created.</description>
        <label>Date Of Request</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dt_Date__c</fullName>
        <description>Date of request</description>
        <inlineHelpText>[Drafting Note: Enter actual date raised]</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dt_Expected_go_live_date__c</fullName>
        <description>Date when the project goes live</description>
        <inlineHelpText>Please enter expected go live date of the project where applicable.</inlineHelpText>
        <label>Expected go-live date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dt_Expected_start_date__c</fullName>
        <description>Date when the project commences</description>
        <inlineHelpText>Please enter expected start date of the project.</inlineHelpText>
        <label>Expected Start Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>eml_Key_contact_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>eml_Project_requestor_Email__c</fullName>
        <description>Project requestor Email</description>
        <label>Project requestor Email*</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>eml_SMT_group_email__c</fullName>
        <label>SMT group email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>eml_Unilever_Budget_Approver_Email__c</fullName>
        <description>Unilever Budget Approver Email*</description>
        <inlineHelpText>Email of Unilever person responsible for approving the project budget.</inlineHelpText>
        <label>Unilever Budget Approver Email*</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>eml_Unilever_Content_Approver_Email__c</fullName>
        <description>Unilever Content Approver Email*</description>
        <inlineHelpText>Email of Unilever person responsible for approving the project content.</inlineHelpText>
        <label>Unilever Content Approver Email*</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>eml_Unilever_Finance_BP_Contact_Email__c</fullName>
        <description>Unilever Finance BP/Contact Email*</description>
        <inlineHelpText>Email of Finance Person Maybe Contacted To Confirm Budget And Cost Centre Details</inlineHelpText>
        <label>Unilever Finance BP/Contact Email*</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>eml_Unilever_Project_Manager_Email__c</fullName>
        <description>Unilever Project Manager Eamil*</description>
        <inlineHelpText>Email of project manager</inlineHelpText>
        <label>Unilever Project Manager Email*</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>eml_VDM_group_email__c</fullName>
        <label>VDM group email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ftxt_Unilever_Project_Manager_Name__c</fullName>
        <description>This filed will be used for Email Template</description>
        <formula>lkp_Unilever_project_manager__r.FirstName + &apos; &apos;+lkp_Unilever_project_manager__r.LastName</formula>
        <label>Unilever Project Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isApprovalProcessStarted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isApprovalProcessStarted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCancelled_PWORF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>true when PWORF is Cancelled.</description>
        <label>isCancelled PWORF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used when LOI is cancelled</description>
        <label>isCancelled LOI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isValidated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PWORF validation check field</description>
        <label>isValidated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lkp_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PWORF1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lkp_Project_requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of requestor</description>
        <label>Project requestor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>PWORF</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>